# temporal_OpenGEX

./: CMakeLists.txt  README.md  notused.cmade
openddl/: CMakeLists.txt  ODDLTypes.h  OpenDDL.vcxproj
opengex/: CMakeLists.txt  OpenGEX.cpp  OpenGEX.h  OpenGEX.vcxproj  opengexlib.cmake
scripts/: linux_compile.sh
