cmake_minimum_required(VERSION 3.5)

set(OPENDDL_INCLUDES 
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLArray.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLMap.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLString.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLTree.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLTypes.h
   ${CMAKE_CURRENT_SOURCE_DIR}/OpenDDL.h
   )

set(OPENDDL_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLMap.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLString.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ODDLTree.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/OpenDDL.cpp
   )

#file(GLOB OPENDDL_INCLUDES *.h)
#file(GLOB OPENDDL_SOURCES *.cpp)

source_group("" FILES ${OPENDDL_INCLUDES})
source_group("" FILES ${OPENDDL_SOURCES})

include_directories(.)
add_library(openddl ${OPENDDL_SOURCES} ${OPENDDL_INCLUDES})
